--- a/src/app/main-menu/title/title.component.css
+++ b/src/app/main-menu/title/title.component.css
@@ -5,5 +5,6 @@
   width: 825px;
   height: 211.5px;
   position: absolute;
-  right: 80px;
+  right: 111px;
+  top: 52px;
 }
